--- a/modules/10_ironmine_irm/config/locales/zh.yml
+++ b/modules/10_ironmine_irm/config/locales/zh.yml
@@ -549,6 +549,7 @@ zh:
   label_irm_company_base_info: 基本信息
   label_irm_company_site_info: 地点
   label_irm_company_support_group: 支持组
+  label_irm_company_support_group_list: 支持组列表
   label_irm_company_time_zone: 时区
   label_irm_company_hotline: 热线
   label_irm_company_cost_center: 成本中心
