fixed: 按日立需求，将incident request修正为ticket

--- a/modules/10_ironmine_irm/config/locales/en.yml
+++ b/modules/10_ironmine_irm/config/locales/en.yml
@@ -789,7 +789,7 @@ en:
   label_irm_person_security_flag: Security Flag
   label_irm_person_access_system: Accessible Systems
   label_irm_person_add_to_company: Add to Company
-  label_irm_person_add_to_system: Add to External System
+  label_irm_person_add_to_system: Add to System
   label_irm_person_password_info: Set Password
   error_irm_person_new_old_password_same: New password can not be same as the old one.
   label_irm_person_reset_password: Reset Password
