feature: 目前用户管理界面，用户列表中，无法区分哪些用户是来自LDAP的。 数据库中应该有相应的字段区分，应该将是否来自LDAP（最好能显示来自哪个LDAP源）显示到列表（列表上至少显示是否来自LDAP）以及 人员查看 页面上。
同时，对于LDAP用户，修改用户信息时应该不显示或禁用 密码 更改区域（包括个人信息修改页面），避免不必要的误会。

--- a/modules/10_ironmine_irm/config/locales/en.yml
+++ b/modules/10_ironmine_irm/config/locales/en.yml
@@ -793,6 +793,8 @@ en:
   label_irm_person_password_info: Set Password
   error_irm_person_new_old_password_same: New password can not be same as the old one.
   label_irm_person_reset_password: Reset Password
+  label_irm_person_is_ldap: LDAP
+  label_irm_person_ldap_source: LDAP Source
   #=========================end irm people_controller=======================#
   #=========================irm id_flexes_controller=======================#
   label_irm_id_flex: Flex
