--- a/modules/10_ironmine_irm/config/locales/en.yml
+++ b/modules/10_ironmine_irm/config/locales/en.yml
@@ -1347,6 +1347,7 @@ en:
   label_irm_wf_step_instance_approval_status_code: Status
   label_irm_wf_step_instance_assign_approver: Assign Approver
   label_irm_wf_step_instance_actual_approver: Actual Approver
+  label_irm_wf_step_instance_assign_or_actual_approver: Assign/Actual Approver
   label_irm_wf_process_instance_global_status: Status
   label_irm_wf_process_approval_history: Approval History
   label_irm_wf_step_instance_reassign: Reassign
