添加浏览文件按钮对应的资源资源文件

--- a/modules/10_ironmine_irm/config/locales/en.yml
+++ b/modules/10_ironmine_irm/config/locales/en.yml
@@ -7,6 +7,7 @@ en:
   current_page_help: Current help page
   #usual button
   fresh: Resh
+  browse: Browse
   after_n_fresh: Auto refresh in %{n} seconds
   not_auto_refresh: Not auto refresh
   fresh_time: Setting fresh time
